<resources>
    <string name="app_name">Attil</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="no_internet">Please Check Your Internet Connection</string>
    <string name="required">Required</string>
    <string name="retry">Retry</string>
    <string name="new_user">New User?</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="login_with_password">Login with password</string>
    <string name="otp_info">Verification code has been sent to your mobile number, please enter it to verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="offers">Offers</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>

    <string name="privacy_policy">By continuing, I accept Attil\'s   <a href="https://attic-official.s3.ap-south-1.amazonaws.com/Attil+Terms+and+Condition.pdf">Terms and Conditions</a> and <a href="https://attic-official.s3.ap-south-1.amazonaws.com/Attil+Privacy+Policy.pdf">Privacy Policy.</a> </string>
<!--    <string name="privacy_policy">By continuing I accept</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reset_password">Reset Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out_title">Are you sure you want to logout?</string>
    <string name="register_for_attil">Register for Attil</string>
    <string name="create_account">Create Account</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="verify">Verify Mobile Number</string>
    <string name="sendotp">Send OTP</string>
    <string name="sign_up_warning">Please register the Mobile Number</string>
    <string name="give_your_username">Give your Username</string>
    <string name="username_available"><font fgcolor='#00C853'>Username Available</font> &#128077;</string>
    <string name="username_not_available"><font fgcolor='#E7492E'>Username Not Available</font> &#128078;</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="pick_your_gender">Pick your Gender</string>
    <string name="user_details">User Details</string>
    <string name="next">Next</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_confirm_password">Enter your Confirm Password</string>
    <string name="password_length_validation">6 to 24 characters and at least one numeric digit</string>
    <string name="new_password_match_validation">New Password and Confirm Password do not match</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="home_search_hint">Search Products</string>
    <string name="top_offers">Top Offers</string>
    <string name="trending_offers">Trending Offers</string>
    <string name="starts">Starts</string>
    <string name="Rs">\u20B9</string>
    <string name="you_save">You save</string>
    <string name="normal_offers">Normal Offers</string>
    <string name="add">Add</string>
    <string name="available">Available</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="tamil_title">தமிழ்</string>
    <string name="english_title">English</string>
    <string name="language_title">Select Language</string>
    <string name="packed">Packed</string>
    <string name="varirities_arrow">Varieties</string>
    <string name="brands">Brands</string>
    <string name="no_item_found">No item found</string>
    <string name="type">Type</string>
    <string name="local_products">Local Products</string>
    <string name="branded_products">Branded Products</string>
    <string name="price">Price</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="view">View</string>
    <string name="filters">Filters</string>
    <string name="mostly_viewed">Mostly Viewed</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="top_selling">Top Selling</string>
    <string name="clear">Clear</string>
    <string name="upto">upto</string>
    <string name="totally">Totally</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="total_cart">Total Cart</string>
    <string name="checkout">Checkout</string>
    <string name="picked">Picked</string>
    <string name="delete">Delete</string>
    <string name="packs">Packs</string>
    <string name="pack">Pack</string>
    <string name="cart_error">Please add any product!</string>
    <string name="okay_title">Okay</string>
    <string name="alert_title">Alert!</string>
    <string name="adress">Address Selection</string>
    <string name="pay_now">Pay Now</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="delivery_to">Delivery To</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="or">OR</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="no_address_found">No Address Found</string>
    <string name="total_amount">Total Amount</string>
    <string name="packing_charges">Packing Charges</string>
    <string name="total_item_price">Total Item Price</string>
    <string name="purchase_above">Purchase above</string>
    <string name="free_delivery">and get FREE delivery</string>
    <string name="free">FREE</string>
    <string name="landmark_title">Landmark:</string>
    <string name="location_selected">Location Selected</string>
    <string name="add_address">Add Address</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="additional_phone_number_optional">Additional Phone number (Optional)</string>
    <string name="pin_code">PIN Code</string>
    <string name="flat_hint">Flat, House No, Building, Hotel, Apartment</string>
    <string name="area_hint">Area, Colony, Street, Sector, Village</string>
    <string name="landmark_hint">Landmark e.g near Apollo Hospital</string>
    <string name="town_city">Town / City</string>
    <string name="state_hint">State</string>
    <string name="country_hint">Country</string>
    <string name="pay_using">Pay Using</string>
    <string name="debit_credit_card">Debit / Credit Card</string>
    <string name="upi">UPI</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="update_address">Update Address</string>
    <string name="address">Address</string>
    <string name="delivered">Delivered</string>
    <string name="on_returning">On Returning</string>
    <string name="on_going">On Going</string>
    <string name="orders_dot_title">Orders...</string>
</resources>