<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ln_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/black_transparent_16"
                android:ellipsize="end"
                android:fontFamily="@font/noto_sans_semi_bold"
                android:gravity="center"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/alert_title"
                android:textColor="@color/error_color"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/noto_sans_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cart_error"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_got_it"
                style="@style/ButtonNormal"
                android:layout_margin="8dp"
                android:text="@string/okay_title"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>