<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.illagu.attil.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".signup.info.SignUpInfoActivity">

        <include
            android:id="@+id/ln_toolbar"
            layout="@layout/app_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <include
                android:id="@+id/ln_error"
                layout="@layout/custom_error_snackbar"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/ln_clear"
                android:layout_below="@+id/ln_error">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_semi_bold"
                            android:text="@string/type"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />

                        <RadioGroup
                            android:id="@+id/rg_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rb_local"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/local_products"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/rb_branded"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/branded_products"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_semi_bold"
                            android:text="@string/price"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />

                        <RadioGroup
                            android:id="@+id/rg_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rb_low"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/low_to_high"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/rb_high"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/high_to_low"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/noto_sans_semi_bold"
                            android:text="@string/view"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />

                        <RadioGroup
                            android:id="@+id/rg_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rb_mostly_viewed"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/mostly_viewed"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/rb_new_arrivals"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/new_arrivals"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/rb_top_selling"
                                style="@style/MyRadioButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="?selectableItemBackground"
                                android:fontFamily="@font/noto_sans_semi_bold"
                                android:gravity="start|center"
                                android:padding="8dp"
                                android:text="@string/top_selling"
                                android:textColor="@color/text_color"
                                android:textSize="15sp" />
                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/ln_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_clear"
                    style="@style/ButtonNormal"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/clear" />

            </LinearLayout>

            <include
                android:id="@+id/ln_progressbar"
                layout="@layout/progress_bar_layout"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>

</layout>